replacing get(0) with getFirst() for list